[package]
edition = "2021"
license = "license: BSD 2-Clause"
name = "temporary_record"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = {version = "0.4.31", features = ["clock", "std"]}
diesel = {version = "2.1.0", features = ["sqlite", "chrono"]}
dotenvy = "0.15"
libsqlite3-sys = {version = "0.27.0", features = ["bundled"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
